Refactor: Disable external Thrift service, use local timestamp

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ staticfiles/
 
 # Secrets File - VERY IMPORTANT
 .env
+
+# --- Disabled Thrift Service Files  ---
+Dockerfile
+thrift_requirements.txt
+timestampthrift.py
+timestamp.thrift
